--- a/html/01.jquery-review.html
+++ b/html/01.jquery-review.html
@@ -6,10 +6,23 @@
 	<title>jQuery 리뷰</title>
 	<link rel="stylesheet" href="../css/reset.css">
 	<script src="../js/jquery-3.5.1.min.js"></script>
+	<style>
+		.a {font-size : 3em;}
+	</style>
 </head>
 <body>
-	<div class="a"></div>
+	<h1 class="a" id="sample">Hello jQurey</h1>
 	<script>
+		console.log ( document.getElementById('sample') );
+		console.log ( $('#sample') );
+		//$('#sample').click(function(){alert("안녕하세요");});
+		//$(document.getElementById('sample')).click(function(){alert("안녕하세요")});
+		document.getElementById('sample').addEventListener('click', function(){
+			alert("안녕하세요");
+		});
+
+
+
 		var a = 10; //var는 변수를 선언한 것임. 이름을 마음대로 줄 수 있음
 		function test() { //void(공허하다)형 함수
 			console.log("hi");
@@ -45,7 +58,7 @@
 // $(".a").width().hide();
 // $(".a").attr("id").hide();
 
-		console.log( $(".a") );
+//		console.log( $(".a").attr("id", "sample") );
 	</script>
 </body>
 </html>
