--- a/html/03.dom.html
+++ b/html/03.dom.html
@@ -13,7 +13,16 @@
 		<button class="btn btn-primary" id=btPrepend>Prepend</button>
 		<button class="btn btn-primary" id=btRemove>Remove</button>
 		<button class="btn btn-primary" id=btEmpty>Empty</button>
+		<button class="btn btn-primary" id=btHtml>Html</button>
+		<button class="btn btn-primary" id=btText>Text</button>
+		<button class="btn btn-success" id=btReset>초기화</button>
 	</div>
+	<div class="container p-5 border"><!-- container는 반응형의 박스를 만들어줌 부트스트랩! -->
+		<div class="list-wrap text-center">
+			<div>====== 기준 ======</div>
+		</div>
+	</div>
+
 	<script src="../js/03.dom.js"></script>
 </body>
 </html>
