--- a/html/05.flex.html
+++ b/html/05.flex.html
@@ -54,9 +54,10 @@
 		.box {
 			border: 2px solid blue;
 			padding: 0.5em;
-			width: 100px;
+			/* width: 100px;
 			flex-grow: 1;
-			flex-shrink: 1;
+			flex-shrink: 1; */
+			flex: 100px 1 1;
 		}
 		.box:nth-child(3) {
 			order:-1;
